--- a/styles/pokedex.css
+++ b/styles/pokedex.css
@@ -1,4 +1,9 @@
-/* Ficheiro de estilos para a pagina de pokedex */
+/*
+ * This CSS file contains styles for the Pokédex page.
+ * It includes layout rules for the main container, ensuring a flexible and responsive design.
+ * The file also defines styles for specific elements such as the battle panel and the open/close button for the aside menu.
+ * These styles ensure a consistent and visually appealing user interface.
+ */
 
 
 .container {
@@ -6,7 +11,7 @@
     flex-direction: row-reverse;
 
     .openCloseAside {
-        position: absolute;
+        position: fixed;
         z-index: 2;
         display: none;
         justify-content: center;
@@ -159,8 +164,8 @@
                 width: 50px;
                 height: 50px;
                 object-fit: cover;
-                border-radius: 50%;
                 margin-bottom: 5px;
+                transition: transform 0.5s ease;
             }
 
             span {
@@ -169,6 +174,10 @@
                 color: #333;
                 font-weight: bold;
             }
+        }
+
+        li:hover img {
+            transform: scale(1.5);
         }
 
         li:hover button {
