--- a/styles/battle.css
+++ b/styles/battle.css
@@ -36,7 +36,7 @@ body {
     background-color: #eff3ff;
     display: flex;
     flex-direction: column;
-    height: 100vh;
+    height: 100dvh;
     justify-content: space-between;
     overflow: hidden;
     /* Prevent scrollbars from appearing */
