--- a/styles/styles.css
+++ b/styles/styles.css
@@ -197,7 +197,7 @@ header {
     }
 
     header>div {
-        display: none;
+        display: none !important;
     }
 }
 
@@ -863,4 +863,14 @@ header {
     50% {
         transform: translateY(-10px);
     }
+}
+
+.noselect {
+    -webkit-touch-callout: none; /* iOS Safari */
+      -webkit-user-select: none; /* Safari */
+       -khtml-user-select: none; /* Konqueror HTML */
+         -moz-user-select: none; /* Old versions of Firefox */
+          -ms-user-select: none; /* Internet Explorer/Edge */
+              user-select: none; /* Non-prefixed version, currently
+                                    supported by Chrome, Edge, Opera and Firefox */
 }
