--- a/styles/pokedex.css
+++ b/styles/pokedex.css
@@ -656,7 +656,6 @@ main {
     text-shadow: 0 0 15px #ffcb05, 0 0 25px #ffcb05;
 }
 
-
 .restart-button-game {
     padding: 15px 30px;
     font-size: 1.3rem;
@@ -837,4 +836,16 @@ main {
 .restart-button-game.team-full {
     padding: 15px 25px;
     font-size: 1.2rem;
+}
+
+.button-container-for-center {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-top: 20px;
+}
+
+/* Optional: Add some padding around the button for aesthetics */
+.button-container-for-center button {
+    margin: 0 auto;
 }
