--- a/styles/pokedex.css
+++ b/styles/pokedex.css
@@ -22,6 +22,7 @@
         height: 50px;
         margin-top: 90px;
         border-radius: 8px 0px 0px 8px;
+        transition: 0.5s;
     }
 
     #battle-panel {
@@ -39,6 +40,7 @@
         border-left: 5px solid #f7d02c;
         padding-top: 60px;
         overflow-y: auto;
+        z-index: 900;
 
         .user-info {
             display: flex;
@@ -422,26 +424,45 @@ main {
         }
         
         .save-button {
-            width: 150px;
-            padding: 12px 20px;
-            background-color: #f7d02c;
-            color: rgba(0, 0, 0, 0.76);
+            padding: 15px 30px;
+            font-size: 1.3rem;
+            font-weight: bold;
+            color: #000000;
+            background-color: #ffcb05;
             border: none;
             border-radius: 8px;
-            font-size: 16px;
-            font-weight: bold;
             cursor: pointer;
-            transition: all 0.3s ease;
-            display: flex;
-            align-items: center;
-            gap: 10px;
+            transition: transform 0.3s ease-in-out, background-color 0.3s;
+            box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
+            overflow: hidden;
+            position: relative;
             margin-top: 20px;
-            align-self: center;
         }
-        
+
         .save-button:hover {
             transform: scale(1.1);
+            background-color: #ffd738;
+            box-shadow: 0 8px 20px rgba(0, 0, 0, 0.4);
         }
+
+        .save-button::after {
+            content: "";
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            width: 100px;
+            height: 100px;
+            background: rgba(255, 255, 255, 0.2);
+            border-radius: 50%;
+            transform: translate(-50%, -50%) scale(0);
+            transition: transform 0.3s ease-out;
+            z-index: -1;
+        }
+
+        .save-button:hover::after {
+            transform: translate(-50%, -50%) scale(1.5);
+        }
+        
     }
 
     .close-button:hover {
@@ -558,7 +579,7 @@ main {
 
 .pokemon-card.expanded {
     position: fixed;
-    z-index: 1000;
+    z-index: 900!important;
     transition: all 0.5s ease-in-out;
     box-shadow: 0 20px 40px rgba(0, 0, 0, 0.5);
 }
@@ -579,7 +600,7 @@ main {
     width: 100%;
     height: 100%;
     background: rgba(0, 0, 0, 0.5);
-    z-index: 999;
+    z-index: 899;
     opacity: 0;
     pointer-events: none;
     transition: opacity 0.5s ease-in-out;
